--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      color: blueviolet;
     }
 
     .brochure-container {
