--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-color: #f4f4f4;
+      background-color: purple;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      color: blueviolet;
     }
 
     .brochure-container {
