--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-color: purple;
+      background-color:;
       display: flex;
       align-items: center;
       justify-content: center;
