--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     .brochure-container {
       max-width: 90%;
-      max-height: 90%;
+      max-height: auto;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       background-color: white;
       padding: 10px;
