--- a/index.html
+++ b/index.html
@@ -3,37 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>algo.rythm|Brochure</title>
+  <title>algo.rythm | Brochure</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-color:;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      background-color: #fff; /* Set a background if desired */
     }
 
-    .brochure-container {
-      max-width: 90%;
-      max-height: auto;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      background-color: white;
-      padding: 10px;
-    }
-
-    .brochure-container img {
-      width: 100%;
+    img {
+      width: 90%;
       height: auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       display: block;
     }
   </style>
 </head>
 <body>
-  <div class="brochure-container">
-    <img src="brochure.png" alt="Brochure Image">
-  </div>
+  <img src="brochure.png" alt="Brochure Image">
 </body>
 </html>
