--- a/index.html
+++ b/index.html
@@ -10,21 +10,53 @@
       padding: 0;
       font-family: sans-serif;
       display: flex;
-      align-items: center;
       justify-content: center;
-      height: 100vh;
-      background-color: #fff; /* Set a background if desired */
+      flex-direction: column;
+      align-items: center;
     }
 
     img {
       width: 90%;
       height: auto;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      display: block;
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <img src="brochure.png" alt="Brochure Image">
+  <img src="brochure.png" alt="Brochure Image" id="brochure">
+
+  <script>
+    const img = document.getElementById('brochure');
+    img.onload = () => {
+      const canvas = document.createElement('canvas');
+      const context = canvas.getContext('2d');
+
+      canvas.width = img.naturalWidth;
+      canvas.height = img.naturalHeight;
+
+      context.drawImage(img, 0, 0);
+
+      const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
+      const data = imageData.data;
+
+      let r = 0, g = 0, b = 0, count = 0;
+
+      for (let i = 0; i < data.length; i += 4 * 100) { // Skip some pixels for performance
+        r += data[i];
+        g += data[i + 1];
+        b += data[i + 2];
+        count++;
+      }
+
+      r = Math.floor(r / count);
+      g = Math.floor(g / count);
+      b = Math.floor(b / count);
+
+      document.body.style.backgroundColor = `rgb(${r}, ${g}, ${b})`;
+    };
+  </script>
 </body>
 </html>
+
