--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>algo.rythm | Brochure</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      background-color: #ffffff; /* fallback background */
     }
 
-    body {
-      background-image: url('brochure.png');
-      background-repeat: no-repeat;
-      background-size: contain; /* Show full image without cropping */
-      background-position: top center;
-      background-color: #fff;
-      overflow-y: auto;
-      background-attachment: fixed;
-
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
+  <img src="brochure.png" alt="Full-page brochure">
 </body>
 </html>
+
